RESOLVED FIXED201408
[LFC] FloatingState should not need to query for display boxes.
https://bugs.webkit.org/show_bug.cgi?id=201408
Summary [LFC] FloatingState should not need to query for display boxes.
alan
Reported 2019-09-02 16:22:57 PDT
ssia
Attachments
Patch (10.99 KB, patch)
2019-09-02 16:28 PDT, alan
koivisto: review+
Radar WebKit Bug Importer
Comment 1 2019-09-02 16:23:20 PDT
alan
Comment 2 2019-09-02 16:28:54 PDT
alan
Comment 3 2019-09-03 12:53:54 PDT
Note You need to log in before you can comment on or make changes to this bug.